@@ -93,20 +93,20 @@ speedGiga = [b]%.2(speed)[b]GB/s
 #
 [Theme]
 # glFTPD events.
-NEWDIR        = [b][[c1]%(section)[c]][b] New Release: [b]%(releaseName)[b] by [b]%(user)[b]/%(group).
-DELDIR        = [b][[c1]%(section)[c]][b] Directory Deleted: [b]%(releaseName)[b] by [b]%(user)[b]/%(group).
-NUKE          = [b][[c1]%(section)[c]][b] [b]%(releaseName)[b] was nuked [b]%(multi)x[b] by [b]%(user)[b] for [b]%(reason)[b]. Nukees: %(nukees)
-UNNUKE        = [b][[c1]%(section)[c]][b] [b]%(releaseName)[b] was unnuked [b]%(multi)x[b] by [b]%(user)[b] for [b]%(reason)[b]. Nukees: %(nukees)
+NEWDIR        = [b][[c1]%(section)[c]][b] New Release: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group).
+DELDIR        = [b][[c1]%(section)[c]][b] Directory Deleted: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group).
+NUKE          = [b][[c1]%(section)[c]][b] %(releasePath)[b]%(releaseName)[b] was nuked [b]%(multi)x[b] by [b]%(user)[b] for [b]%(reason)[b]. Nukees: %(nukees)
+UNNUKE        = [b][[c1]%(section)[c]][b] %(releasePath)[b]%(releaseName)[b] was unnuked [b]%(multi)x[b] by [b]%(user)[b] for [b]%(reason)[b]. Nukees: %(nukees)
 NUKEES        = [b]%(user)[b] (%(stats))
 NUKEES_JOIN   = ", "
 REQUEST       = [b][[c1]Request[c]][b] [b]%(request)[b] deleted by [b]%(user)[b]/%(group).
 REQFILLED     = [b][[c1]Request[c]][b] [b]%(request)[b] filled by [b]%(user)[b]/%(group) for [b]%(reqUser)[b].
-WIPE          = [b][[c1]%(section)[c]][b] Wiped: [b]%(releaseName)[b] by [b]%(user)[b]/%(group).
-WIPE-r        = [b][[c1]%(section)[c]][b] Wiped: [b]%(releaseName)[b] by [b]%(user)[b]/%(group).
+WIPE          = [b][[c1]%(section)[c]][b] Wiped: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group).
+WIPE-r        = [b][[c1]%(section)[c]][b] Wiped: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group).
 
 # ModPreTimes events
-PRENEW        = [b][[c1]%(section)[c]][b] New Release: [b]%(releaseName)[b] by [b]%(user)[b]/%(group) :: pred %(age) ago.
-PRELATE       = [b][[c1]%(section)[c]][b] New Release: [b]%(releaseName)[b] by [b]%(user)[b]/%(group) :: pred %(age) ago, older than the %(limit) limit.
+PRENEW        = [b][[c1]%(section)[c]][b] New Release: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group) :: pred %(age) ago.
+PRELATE       = [b][[c1]%(section)[c]][b] New Release: %(releasePath)[b]%(releaseName)[b] by [b]%(user)[b]/%(group) :: pred %(age) ago, older than the %(limit) limit.
 
 # Error events.
 ERROR         = [b][[c1]Error[c]][b] %(message)
