@@ -3,6 +3,7 @@ AlcoBot v0.6.0 (not released):
   NEW: Bouncer module to display the status of FTP bouncers.
   NEW: Expanded zipscript support to include iojZS (jeza) and php_psio (SnypeTEST).
   NEW: The "ftpd" module will indicate if the FTP connection succeeded or failed.
+  CHG: A trailing path separator is appended to %(releaseFull) and %(releasePath).
   CHG: Debug mode is disabled by default.
   FIX: Forgot to add the "UPDATE" log type to the "zipscript" event group.
   FIX: The "SITE INVADMIN USER" would fail if the same IRC and FTP user were used repeatedly.
